--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                 <li><a href="#">Artista 2</a></li>
                 <li><a href="#">Artista 3</a></li>
             </ul>
-            <div class="card">
+            <!-- <div class="card">
                 <img src="https://picsum.photos/300" alt="Imagen del artista">
                 <div class="info">
                     <h2>Nombre del artista</h2>
                     <p>Descripción del artista y su música.</p>
                     <a href="enlace-a-su-página-web-o-red-social">Más información</a>
                 </div>
-            </div>
+            </div> -->
         </section>
 
         <section id="eventos">
