--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <section id="artistas">
             <h2>Artistas</h2>
             <ul>
-                <li><a href="#">Artista 1</a></li>
+                <li><a href="artist1.html">Artista 1</a></li>
                 <li><a href="#">Artista 2</a></li>
                 <li><a href="#">Artista 3</a></li>
             </ul>
