--- a/index.html
+++ b/index.html
@@ -1,97 +1,101 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <title>Mi sitio web de música</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LaPresión LTD</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
-
 <body>
     <header>
-        <h1>Mi sitio web de música</h1>
-        <nav>
-            <ul>
-                <li><a href="#sobre-nosotros">Sobre nosotros</a></li>
-                <li><a href="#artistas">Artistas</a></li>
-                <li><a href="#eventos">Eventos</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
+        <div class="logo__container">
+            <img src="logo ltd.webp" alt="Logo principal" class="img__logo">
+            <h1 class="logo__text__container">
+                LaPresión LTD
+            </h1>
+        </div>
+
+        <div class="menu__container">
+            <a href="">Sobre nosotros</a>
+            <a href="">Artistas</a>
+            <a href="">Eventos</a>
+            <a href="">Contacto</a>
+        </div>
     </header>
 
     <main>
-        <section id="sobre-nosotros">
-            <h2>Sobre nosotros</h2>
-            <p>Texto informativo sobre el sitio web y su propósito.</p>
-            <div class="slider">
-                <div class="slider-items">
-                    <div class="slider-item">
-                        <img src="https://picsum.photos/1249/408" alt="Slide 1">
-                    </div>
-                    <div class="slider-item">
-                        <img src="https://picsum.photos/1249/408" alt="Slide 2">
-                    </div>
-                    <div class="slider-item">
-                        <img src="https://picsum.photos/1249/408" alt="Slide 3">
-                    </div>
-                </div>
-                <div class="slider-controls">
-                    <button class="slider-control" data-slide="prev">&lt;</button>
-                    <button class="slider-control" data-slide="next">&lt;</button>
-                </div>
-            </div>
-        </section>
-
-        <section id="artistas">
-            <h2>Artistas</h2>
-            <ul>
-                <li><a href="artist1.html">Artista 1</a></li>
-                <li><a href="#">Artista 2</a></li>
-                <li><a href="#">Artista 3</a></li>
-            </ul>
-            <!-- <div class="card">
-                <img src="https://picsum.photos/300" alt="Imagen del artista">
-                <div class="info">
-                    <h2>Nombre del artista</h2>
-                    <p>Descripción del artista y su música.</p>
-                    <a href="enlace-a-su-página-web-o-red-social">Más información</a>
-                </div>
-            </div> -->
-        </section>
-
-        <section id="eventos">
-            <h2>Eventos</h2>
-            <ul>
-                <li>
-                    <a href="#">Evento 1</a>
-                </li>
-                <li><a href="#">Evento 2</a></li>
-                <li><a href="#">Evento 3</a></li>
-            </ul>
-        </section>
-
-        <section id="contacto">
-            <h2>Contacto</h2>
-            <form>
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre">
-                <label for="correo">Correo electrónico:</label>
-                <input type="email" id="correo" name="correo">
-                <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje"></textarea>
-                <input type="submit" value="Enviar">
-            </form>
-        </section>
+        
     </main>
 
+
     <footer>
-        <p>Derechos reservados © 2023 Mi sitio web de música</p>
+        <div class="content__container">
+            <div class="logo_desc__container">
+                <div class="logo__container">
+                    <img src="logo ltd.webp" alt="Logo principal" class="img__logo">
+                    <div class="logo__text__container">
+                        LaPresión LTD
+                    </div>
+                </div>
+                <div class="desc__container">
+                    Sello discográfico independiente con origen manabita.
+                </div>
+            </div>
+
+            <div class="links__container">
+                <div class="links_columns__container">
+                    <div class="links_columns_header">
+                        Artistas
+                    </div>
+                    <div class="links_columns_content">
+                        <span>Artista 1</span>
+                        <span>Artista 2</span>
+                        <span>Artista 3</span>
+                        <span>Artista 4</span>
+                    </div>
+                </div>
+                <!-- <div class="links_columns__container">
+                    <div class="links_columns_header">
+                        Productos
+                    </div>
+                </div> -->
+                <div class="links_columns__container">
+                    <div class="links_columns_header">
+                        Redes Sociales
+                    </div>
+                    <div class="links_columns_content">
+                        Para tener actuaizaciones mas recientes síguenos en nuestras redes sociales.
+                        <div class="links_icons_container">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8392 5.15941C22.1799 5.51057 22.4218 5.94541 22.5406 6.42C22.8578 8.1787 23.0118 9.96295 23.0006 11.75C23.0069 13.5103 22.8529 15.2676 22.5406 17C22.4218 17.4746 22.1799 17.9094 21.8392 18.2606C21.4986 18.6118 21.0713 18.8668 20.6006 19C18.8806 19.46 12.0006 19.46 12.0006 19.46C12.0006 19.46 5.12057 19.46 3.40057 19C2.93939 18.8738 2.51855 18.6308 2.17872 18.2945C1.83888 17.9581 1.59153 17.5398 1.46057 17.08C1.14334 15.3213 0.989351 13.537 1.00057 11.75C0.991808 9.97631 1.14579 8.20556 1.46057 6.46C1.57936 5.98541 1.82129 5.55057 2.16192 5.19941C2.50255 4.84824 2.92982 4.59318 3.40057 4.46C5.12057 4 12.0006 4 12.0006 4C12.0006 4 18.8806 4 20.6006 4.42C21.0713 4.55318 21.4986 4.80824 21.8392 5.15941ZM15.5 11.75L9.75 15.02V8.47998L15.5 11.75Z" fill="#A7AAB5"/>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M7 2H17C19.7614 2 22 4.23858 22 7V17C22 19.7614 19.7614 22 17 22H7C4.23858 22 2 19.7614 2 17V7C2 4.23858 4.23858 2 7 2ZM16.5 6.5C16.5 5.94772 16.9477 5.5 17.5 5.5H17.51C18.0623 5.5 18.51 5.94772 18.51 6.5C18.51 7.05228 18.0623 7.5 17.51 7.5H17.5C16.9477 7.5 16.5 7.05228 16.5 6.5ZM9.74012 7.51892C10.6736 7.03455 11.7361 6.85685 12.7764 7.01112C13.8375 7.16847 14.82 7.66295 15.5785 8.4215C16.3371 9.18006 16.8315 10.1625 16.9889 11.2236C17.1432 12.2639 16.9655 13.3264 16.4811 14.2599C15.9967 15.1934 15.2303 15.9504 14.2909 16.4232C13.3515 16.896 12.287 17.0606 11.2486 16.8935C10.2103 16.7265 9.25109 16.2362 8.50744 15.4926C7.76379 14.7489 7.27356 13.7897 7.10648 12.7514C6.9394 11.7131 7.10397 10.6485 7.5768 9.70909C8.04963 8.76969 8.80662 8.00329 9.74012 7.51892ZM12.483 8.98949C11.8588 8.89693 11.2214 9.00354 10.6613 9.29417C10.1012 9.58479 9.64697 10.0446 9.36327 10.6083C9.07957 11.1719 8.98083 11.8107 9.08108 12.4336C9.18132 13.0566 9.47546 13.6322 9.92165 14.0784C10.3678 14.5245 10.9434 14.8187 11.5664 14.9189C12.1894 15.0192 12.8281 14.9204 13.3917 14.6367C13.9554 14.353 14.4152 13.8988 14.7058 13.3387C14.9965 12.7786 15.1031 12.1412 15.0105 11.517C14.9161 10.8803 14.6194 10.2908 14.1643 9.83572C13.7092 9.38058 13.1197 9.0839 12.483 8.98949Z" fill="#A7AAB5"/>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path d="M18 2H15C13.6739 2 12.4021 2.52678 11.4645 3.46447C10.5268 4.40215 10 5.67392 10 7V10H7V14H10V22H14V14H17L18 10H14V7C14 6.73478 14.1054 6.48043 14.2929 6.29289C14.4804 6.10536 14.7348 6 15 6H18V2Z" fill="#A7AAB5"/>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path d="M23 3.00029C22.0424 3.67577 20.9821 4.1924 19.86 4.53029C19.2577 3.8378 18.4573 3.34698 17.567 3.12422C16.6767 2.90145 15.7395 2.95749 14.8821 3.28474C14.0247 3.612 13.2884 4.19469 12.773 4.95401C12.2575 5.71332 11.9877 6.61263 12 7.53029V8.53029C10.2426 8.57586 8.50127 8.1861 6.93101 7.39574C5.36074 6.60537 4.01032 5.43893 3 4.00029C3 4.00029 -1 13.0003 8 17.0003C5.94053 18.3983 3.48716 19.0992 1 19.0003C10 24.0003 21 19.0003 21 7.50029C20.9991 7.22174 20.9723 6.94388 20.92 6.67029C21.9406 5.66378 22.6608 4.393 23 3.00029Z" fill="#A7AAB5"/>
+                            </svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M20 4H4C3.25055 4 2.59394 4.41777 2.25155 5.03194C2.36384 5.06109 2.47293 5.11042 2.57355 5.18085L12.0001 11.7794L21.4266 5.18085C21.5272 5.11045 21.6362 5.06113 21.7485 5.03198C21.4061 4.41779 20.7495 4 20 4ZM22 7.2208L12.5735 13.8193C12.2292 14.0603 11.7709 14.0603 11.4266 13.8193L2 7.22068V18C2 19.1 2.9 20 4 20H20C21.1 20 22 19.1 22 18V7.2208Z" fill="#A7AAB5"/>
+                            </svg>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="copy__container">
+            <div class="copy__text">
+                Copyright © LaPresión LTD | 2020 - 2023
+            </div>
+        </div>
     </footer>
 </body>
-
-<script src="slider.js"></script>
-
 </html>
