avance 2 nuevo diseño

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="desc__container">
-                    Sello discográfico independiente con origen manabita.
+                    Sello discográfico independiente con origen 100% manabita.
                 </div>
             </div>
 
