--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
             </div>
         </section>
 
+        <section class="artistas">
+            
+        </section>
+
     </main>
 
 
