--- a/index.html
+++ b/index.html
@@ -5,25 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LaPresión LTD</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="src/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
-
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 </head>
 
 <body>
     <header>
         <div class="logo__container">
-            <img src="logo ltd.webp" alt="Logo principal" class="img__logo">
+            <img src="assets/logo ltd.webp" alt="Logo principal" class="img__logo">
             <h1 class="logo__text__container">
                 LaPresión LTD
             </h1>
@@ -48,28 +44,28 @@
                     <div class="swiper-wrapper">
                         <!-- Slides -->
                         <div class="swiper-slide">
-                            <img src="img_slider/1.svg" alt="Imagen 1">
+                            <img src="assets/img_slider/1.svg" alt="Imagen 1">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img_slider/2.svg" alt="Imagen 2">
+                            <img src="assets/img_slider/2.svg" alt="Imagen 2">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img_slider/3.svg" alt="Imagen 3">
+                            <img src="assets/img_slider/3.svg" alt="Imagen 3">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img_slider/4.svg" alt="Imagen 4">
+                            <img src="assets/img_slider/4.svg" alt="Imagen 4">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img_slider/5.svg" alt="Imagen 5">
+                            <img src="assets/img_slider/5.svg" alt="Imagen 5">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img_slider/6.svg" alt="Imagen 6">
+                            <img src="assets/img_slider/6.svg" alt="Imagen 6">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img_slider/7.svg" alt="Imagen 7">
+                            <img src="assets/img_slider/7.svg" alt="Imagen 7">
                         </div>
                         <div class="swiper-slide">
-                            <img src="img_slider/8.svg" alt="Imagen 8">
+                            <img src="assets/img_slider/8.svg" alt="Imagen 8">
                         </div>
                         <!-- ... -->
                     </div>
@@ -81,7 +77,9 @@
         </section>
 
         <section class="artistas">
-            
+            <div class="main_container_artistas">
+                
+            </div>
         </section>
 
     </main>
@@ -169,7 +167,7 @@
     </footer>
 
 
-    <script src="slider-sw.js"></script>
+    <script src="src/slider-sw.js"></script>
 
 </body>
 
